--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,13 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+@import url("src/editor/file-tree/fileTree.css");
+@import url("/editor/file-tree/file-tree.css");
+@import url("/editor/gallery/gallery.css");
+@import url("/editor/gallery-folder/gallery-folder.css");
+@import url("/editor/layout/layout.css");
+@import url("/editor/steps/steps.css");
+@import url("/editor/tabs/tabs.css");
+/* @import url("/editor/timeline/timeline.css"); */
+
