--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,32 @@ If your plugin does not need CSS, delete this file.
 @import url("src/editor/steps/steps.css");
 @import url("src/editor/tabs/tabs.css");
 
+.ginko-blocks-banner {
+  background: var(--background-secondary);
+  padding: 2rem;
+  border-radius: 8px;
+  margin-bottom: 2rem;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.ginko-blocks-logo {
+  width: 64px;
+  height: 64px;
+  margin: 0 auto 1rem;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2" viewBox="0 0 296 297"><path d="M-1490.89 1133.34h590.662v590.662h-590.662z" style="fill:none" transform="matrix(.50048 0 0 .50048 746.155 -566.685)"/><path d="M891.103 593.909c0 21.124-2.76 38.248-6.164 38.248H865.79c-3.414 0-6.182-17.171-6.182-38.354V415.019c0-9.948.637-19.488 1.771-26.522 1.134-7.034 2.671-10.986 4.275-10.986h19.616c3.221 0 5.833 16.205 5.833 36.194v180.204Zm-9.044-180.392h-13.377c-1.814 0-3.298 9.822-3.298 21.827v25.499c0 12.005 1.484 21.827 3.298 21.827h11.717c.583 0 1.055 2.931 1.055 6.546v7.037c0 1.338.175 2.423.391 2.423h.214c1.814 0 3.298-9.822 3.298-21.827v-41.505c0-12.005-1.484-21.827-3.298-21.827Zm-12.773 99.016c0-1.338-.175-2.422-.39-2.422h-.214c-1.814 0-3.298 9.822-3.298 21.826v42.674c0 12.005 1.484 21.827 3.298 21.827h13.377c1.814 0 3.298-9.822 3.298-21.827v-26.667c0-12.005-1.484-21.827-3.298-21.827h-11.767c-.267 0-.523-.657-.711-1.827-.189-1.17-.295-2.757-.295-4.411v-7.346Z" style="fill:#87285e;stroke:#87285e;stroke-width:.64px" transform="matrix(0 2.16913 -.3496 0 324.3 -1827.732)"/><text x="602.483" y="1092.09" style="font-family:&quot;Charter-Bold&quot;,&quot;Charter&quot;,serif;font-weight:700;font-size:66.667px;fill:#1f1f1f" transform="translate(-542.36 -903.782)">G<tspan x="647.813px 666.158px 704.49px 739.372px" y="1092.09px 1092.09px 1092.09px 1092.09px">inko</tspan></text><text x="595.654" y="1162.92" style="font-family:&quot;Charter-Bold&quot;,&quot;Charter&quot;,serif;font-weight:700;font-size:66.667px;fill:#1f1f1f" transform="translate(-542.36 -903.782)">B<tspan x="635.516px 653.796px 690.272px 720.011px 754.892px" y="1162.92px 1162.92px 1162.92px 1162.92px 1162.92px">locks</tspan></text></svg>');
+  background-size: contain;
+}
+
+.ginko-blocks-title {
+  font-size: 1.8em;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  color: var(--text-normal);
+}
+
+.ginko-blocks-description {
+  font-size: 1.1em;
+  color: var(--text-muted);
+}
+
