--- a/src/editor/layout/layout.css
+++ b/src/editor/layout/layout.css
@@ -1,4 +1,3 @@
-
 /* Layout System Styles */
 .ginko-layout-container {
   position: relative;
@@ -31,16 +30,23 @@
   transition: background-color 150ms ease-in-out;
 }
 
-
+/* Update the layout columns styles */
 .ginko-layout-columns {
   display: flex;
-  gap: 2rem;
-  align-items: center;
+  align-items: stretch; /* Change to stretch to make columns full height */
   justify-content: center;
   margin: 0.5rem;
 }
 
+/* Add vertical line between columns */
+.ginko-layout-column {
+  padding: 0 1rem; /* Add some padding around content */
+}
 
+/* Add vertical line between columns, but not for the last column */
+.ginko-layout-column:not(:last-child) {
+  border-right: 1px solid var(--background-modifier-border);
+}
 
 .ginko-layout-content {
   width: 100%;
@@ -100,8 +106,6 @@
 .ginko-center-container.size-lg { max-width: 1280px; }
 .ginko-center-container.size-xl { max-width: 1536px; }
 
-
-
 /* Edit Button Styles */
 .edit-block-button {
   position: absolute;
@@ -140,14 +144,20 @@
   opacity: 1;
 }
 
-/* Responsive Design */
+/* Update responsive design to handle the border */
 @media screen and (max-width: 768px) {
   .ginko-layout-columns {
     flex-direction: column;
-    gap: 1rem;
   }
 
   .ginko-layout-column {
     width: 100% !important;
+    padding: 1rem;
+  }
+
+  /* Change border from right to bottom for mobile view */
+  .ginko-layout-column:not(:last-child) {
+    border-right: none;
+    border-bottom: 1px solid var(--background-modifier-border);
   }
 }
