--- a/src/editor/layout/layout.css
+++ b/src/editor/layout/layout.css
@@ -25,6 +25,7 @@
 
 .ginko-layout-container {
   background: var(--background-primary);
+  margin: -1.55rem 0 -1.55rem 0;
   border-radius: 8px;
   border: 1px solid var(--background-modifier-border);
   transition: background-color 150ms ease-in-out;
